--- a/package.json
+++ b/package.json
@@ -21,17 +21,17 @@
     "@shopify/flash-list": "1.6.4",
     "apisauce": "^3.0.1",
     "date-fns": "^3.6.0",
-    "expo": "~51.0.14",
+    "expo": "~51.0.31",
     "expo-application": "~5.9.1",
     "expo-constants": "~16.0.2",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.7",
-    "expo-image-picker": "~15.0.5",
+    "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.16",
+    "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.6",
+    "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "lottie-react-native": "6.7.0",
     "mobx": "^6.12.4",
@@ -40,7 +40,7 @@
     "react": "18.2.0",
     "react-content-loader": "^7.0.2",
     "react-dom": "18.2.0",
-    "react-native": "0.74.2",
+    "react-native": "0.74.5",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-drawer-layout": "^3.3.0",
     "react-native-gesture-handler": "~2.16.1",
@@ -48,10 +48,11 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "react-native-maps": "1.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -59,7 +60,7 @@
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.1",
+    "jest-expo": "~51.0.4",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
